--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,11 +21,9 @@
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolBarAtMainAct"
-                android:theme="@style/MyHoloTheme"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:popupTheme="@style/AppTheme.PopupOverlay"/>
+                android:layout_height="wrap_content"
+                android:background="?attr/colorPrimary" />
 
         </android.support.design.widget.AppBarLayout>
 
@@ -41,8 +39,11 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:fitsSystemWindows="true"
+        android:animateLayoutChanges="true"
+        android:background="@color/white"
         app:headerLayout="@layout/nav_header_main"
+        app:itemIconTint="@color/colorPrimaryDark"
+        app:itemTextColor="@color/colorPrimary"
         app:menu="@menu/activity_main_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
