--- a/app/src/main/res/layout/activity_cast_profile.xml
+++ b/app/src/main/res/layout/activity_cast_profile.xml
@@ -11,7 +11,8 @@
         android:layout_height="match_parent">
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:paddingBottom="@dimen/x16">
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profilePhoto"
                 android:layout_width="match_parent"
