--- a/app/src/main/res/layout/activity_tv_detail.xml
+++ b/app/src/main/res/layout/activity_tv_detail.xml
@@ -59,16 +59,24 @@
                     android:layout_marginBottom="@dimen/x16"
                     android:background="@drawable/white_circle_icon"
                     app:icon_type="heart"
-                    app:circle_start_color="@color/colorPrimary"
-                    app:dots_primary_color="@color/colorAccent"
-                    app:dots_secondary_color="@color/colorPrimary"
-                    app:circle_end_color="@color/colorAccent"
+                    app:circle_start_color="@color/colorPrimaryDark"
+                    app:dots_primary_color="@color/red"
+                    app:dots_secondary_color="@color/colorPrimaryDark"
+                    app:circle_end_color="@color/colorPrimary"
                     app:icon_size="@dimen/x32"
                     app:anim_scale_factor="2"
                     app:is_enabled="true" />
             </RelativeLayout>
 
             <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="@dimen/x12"
+                app:cardElevation="@dimen/x4"
+                app:cardPreventCornerOverlap="true"
+                app:cardUseCompatPadding="true"
+                android:background="@color/grey">
+                <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="@dimen/x12"
@@ -178,6 +186,7 @@
                     </LinearLayout>
                 </LinearLayout>
             </android.support.v7.widget.CardView>
+            </android.support.v7.widget.CardView>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -209,7 +218,7 @@
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
+                android:layout_height="@dimen/x1"
                 android:layout_marginTop="@dimen/x8"
                 android:background="@color/black"
                 android:layout_marginBottom="@dimen/x8"
@@ -241,7 +250,7 @@
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
+                android:layout_height="@dimen/x1"
                 android:layout_marginTop="@dimen/x8"
                 android:background="@color/black"
                 android:layout_marginBottom="@dimen/x8"
@@ -263,7 +272,8 @@
                     android:textColor="@color/black"
                     android:fontFamily="sans-serif-condensed"
                     android:paddingLeft="@dimen/x16"
-                    android:paddingTop="@dimen/x8"/>
+                    android:paddingTop="@dimen/x8"
+                    android:layout_marginBottom="@dimen/x8"/>
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/createrRvAtTv"
                     android:layout_width="match_parent"
@@ -272,12 +282,61 @@
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
+                android:layout_height="@dimen/x1"
                 android:layout_marginTop="@dimen/x8"
                 android:background="@color/black"
                 android:layout_marginBottom="@dimen/x8"
                 android:layout_marginRight="@dimen/x22"
                 android:layout_marginLeft="@dimen/x22"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/x128"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/ratingStrAtTv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:textSize="@dimen/xs64"
+                    android:paddingLeft="@dimen/x16"
+                    android:textStyle="normal"
+                    android:textColor="@color/black"
+                    android:paddingTop="@dimen/x16"
+                    android:fontFamily="sans-serif-condensed"/>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_gravity="center">
+                    <RatingBar
+                        android:id="@+id/totaRatingBarAtTv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        style="?android:attr/ratingBarStyleSmall"
+                        android:numStars="5"
+                        android:paddingLeft="@dimen/x8"
+                        android:paddingRight="@dimen/x16"/>
+                    <TextView
+                        android:id="@+id/ratingCountAtTv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/x16S"
+                        android:layout_marginLeft="@dimen/x8"
+                        android:layout_marginRight="@dimen/x16"
+                        android:fontFamily="sans-serif-condensed"
+                        android:drawablePadding="@dimen/x8"
+                        android:drawableRight="@drawable/baseline_person_black_18dp"/>
+                </LinearLayout>
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/top_review"
+                android:textAlignment="center"
+                android:textStyle="normal"
+                android:textSize="@dimen/xs22"
+                android:layout_marginBottom="@dimen/x8"/>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/reviewRvAtTv"
@@ -291,10 +350,11 @@
                 android:layout_height="wrap_content"
                 android:text="@string/review"
                 android:textAlignment="center"
-                android:textColor="@color/colorPrimary"
-                android:textSize="12sp"
+                android:textColor="@color/dark_green"
+                android:textSize="@dimen/x16S"
                 android:fontFamily="sans-serif-condensed"
                 android:paddingLeft="@dimen/x16"
+                android:paddingBottom="@dimen/x12"
                 android:paddingTop="@dimen/x16"
                 android:visibility="gone"/>
 
