--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -53,10 +53,9 @@
             android:textSize="@dimen/x16S"
             android:fontFamily="sans-serif-condensed"
             android:layout_weight="1"
-            android:background="@color/black"
+            android:background="@color/colorPrimary"
             android:textAllCaps="false"
             android:layout_marginLeft="@dimen/x4"
-            android:visibility="invisible"
             android:elevation="@dimen/x4"/>
 
     </LinearLayout>
