--- a/app/src/main/res/layout/review_list_item.xml
+++ b/app/src/main/res/layout/review_list_item.xml
@@ -30,7 +30,7 @@
             android:fontFamily="sans-serif-condensed"
             android:textColor="@color/black"
             android:paddingLeft="@dimen/x8"/>
-        <TextView
+        <com.cooltechworks.views.WhatsAppTextView
             android:id="@+id/reviewTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -39,18 +39,6 @@
             android:paddingRight="@dimen/x8"
             android:paddingLeft="@dimen/x8"
             android:textAlignment="textStart"/>
-
-        <TextView
-            android:id="@+id/moreBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="textEnd"
-            android:text="More"
-            android:textColor="@color/black"
-            android:textSize="@dimen/x16S"
-            android:fontFamily="sans-serif-condensed"
-            android:layout_marginTop="@dimen/x12"/>
-
         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
