--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,6 +6,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/navMv"
+            android:icon="@drawable/baseline_movie_black_48"
             android:title="Movie" />
         <item
             android:id="@+id/navTv"
@@ -19,15 +20,11 @@
             android:id="@+id/navSetting"
             android:icon="@drawable/navigation_settings"
             android:title="Setting" />
+        <item
+            android:id="@+id/navExit"
+            android:icon="@drawable/baseline_arrow_left_black_48"
+            android:title="Exit" />
     </group>
-
-    <item android:title="Close App">
-        <menu>
-            <item
-                android:id="@+id/navExit"
-                android:title="Exit" />
-        </menu>
-    </item>
 
     <item android:title="Communicate">
         <menu>
@@ -37,7 +34,8 @@
                 android:title="Share" />
             <item
                 android:id="@+id/navRate"
-                android:title="Rate" />
+                android:title="Rate"
+                android:icon="@drawable/baseline_star_black_48"/>
         </menu>
     </item>
 
