--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#00032a</color>
+    <color name="colorPrimaryDark">#9b2a58</color>
+    <color name="colorAccent">#212121</color>
+    <color name="red">#ff0000</color>
 
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
+    <color name="grey">#bdbdbd</color>
 
-    <!-- #9b2a58  #00032a #212121   #bdbdbd-->
+    <color name="dark_green">#27ae60</color>
+    <color name="light_green">#B3C833</color>
+
 </resources>
