--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,12 +12,14 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="MyHoloTheme" parent="@android:style/Theme.Holo">
-        <item name="android:actionOverflowButtonStyle">@style/OverFlow</item>
-    </style>
-    <style name="OverFlow" parent="@android:style/Widget.Holo.ActionButton.Overflow">
-        <item name="android:src">@drawable/sort_icon</item>
-    </style>
+    <!--
+        <style name="MyHoloTheme" parent="@android:style/Theme.Holo">
+            <item name="android:actionOverflowButtonStyle">@style/OverFlow</item>
+        </style>
+        <style name="OverFlow" parent="@android:style/Widget.Holo.ActionButton.Overflow">
+            <item name="android:src">@drawable/baseline_unfold_more_white_18</item>
+        </style>
+     -->
 
     <style name="AppTheme.nobar" parent="Theme.AppCompat.DayNight.NoActionBar"/>
 
